# Bioprocess-DL-MLOps

./: .dockerignore  .env  .gitignore  .pre-commit-config.yaml  Dockerfile.airflow  README.md  docker-compose.yaml  params.yaml  pyproject.toml  requirements.txt  requirements_dev.txt  ruff.toml  setup.cfg  template.py
airflow/dags/: training_pipeline.py
config/: config.yaml  logging.dev.ini  logging.prod.ini
experiment/: experiments.ipynb
extra/: extras.md
resources/: kernel_methods.html  kernel_methods.md  resources.md
src/bioprocess_mlops/: main.py
src/bioprocess_mlops/components/: __init__.py  data_ingestion.py  data_transformation.py  model_evaluation.py  model_training.py
src/bioprocess_mlops/config/: __init__.py  config.py
src/bioprocess_mlops/constants/: __init__.py
src/bioprocess_mlops/pipeline/: __init__.py  training_pipeline.py
src/bioprocess_mlops/utils/: __init__.py  logging_utils.py  utils.py
