[metadata]
name = bioprocess_mlops
version = 0.0.0
description = "ML and DL applied to Bioprocess modeling using MLOps"
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
license_file = LICENSE
author = Amulya Baniya
author_email = ronaldoamulya@gmail.com

[options]
package_dir =
    = src
packages = find:
include_package_data = True
python_requires = >=3.10, <4
install_requires = 
    pandas

[options.packages.find]
where = src